--- a/WeatherApp/WeatherApp/Resources/Localizable.strings
+++ b/WeatherApp/WeatherApp/Resources/Localizable.strings
@@ -7,3 +7,8 @@
 */
 
 "locations" = "Locations";
+"search_locations_placeholder" = "Search Locations";
+"reset_cities_text" = "Reset Cities";
+"cities_delete_confirmation_message" = "Do you really want to delete cities ?";
+"yes_text" = "Yes";
+"no_text" = "No";
